Correction erreur de lien page 2 et problème de contraste sur les 2 pages

--- a/style.css
+++ b/style.css
@@ -678,7 +678,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 1.2rem;
 }
 
 .tight-width-whitespace {
@@ -772,7 +772,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C;
+    color: black;
 }
 
 .btn-atomic-tangerine {
